# TAED2_YOLOs

./: .env.test  .gitignore  Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml  requirements.txt  upload_data_dvc.sh
.dvc/: config
cards/: DatasetCard.md  ModelCard.md
data/: processed.dvc  raw.dvc
data/interim/: splitted.dvc  transformed.dvc
data/interim/splitted/images/: train.dvc  val.dvc
data/interim/splitted/masks/: test.dvc  train.dvc  val.dvc
data/interim/transformed/images/: test.dvc
data/interim/transformed/masks/: test.dvc  train.dvc  val.dvc
data/processed/labels/: .gitignore  test.dvc  train.dvc  val.dvc
data/raw/dataset_person-yolos/data/: .gitignore  images.dvc  masks.dvc
data/raw/dataset_person-yolos/test/: images.dvc
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: .env.test  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/buttons/: PrimaryButton.tsx
frontend/src/components/image/: ImageInput.tsx  ImageUpload.tsx
frontend/src/components/layout/: PageHeader.tsx
frontend/src/components/predictions/: PredictionCard.tsx  PredictionStats.tsx
frontend/src/components/stats/: GetStatsSelect.tsx
frontend/src/components/text/: PageSubtitle.tsx  PageTitle.tsx
frontend/src/infraestructure/: predictionsService.ts  types.ts
metrics/: emissions.csv  emissions_evaluation.csv  emissions_inference.csv  emissions_inference_api.csv  emissions_training.csv  powermetrics_log.txt  scores.json
mlruns/0/: meta.yaml
models/configs/: config_hyps.yaml  config_yolos.yaml  config_yolos_sample_train.yaml
notebooks/: 0_NG_data-pipelines.ipynb  0_dataPipelines.ipynb  1_MJ_mlflow-experiments.ipynb  1_MlflowExperiments.ipynb  2_MR_predictions-&-postprocessing-pipeline.ipynb  2_MR_predictions-and-postprocessing-pipeline.ipynb  3_MR_evaluation.ipynb  3_evaluation.ipynb  config.yaml  dataPipelines.ipynb
person_image_segmentation/: __init__.py  config.py  dataset.py  features.py  plots.py
person_image_segmentation/api/: app.py  schema.py
person_image_segmentation/modeling/: evaluation.py  predict.py  prediction.py  simple_train.py  train.py  train_v0.py
person_image_segmentation/pipelines/: complete_data_folder.py  config.yaml  create_labels.py  dataPipelines.py  data_pipelines.py  download_raw_data.py  evaluationPipeline.py  predictionPipeline.py  readme.md  split_data.py  transform_masks.py
person_image_segmentation/utils/: api_utils.py  app.py  dataset_utils.py  deepchecks-validation.py  model_training_v0.py  modeling_utils.py  processing.py  run_kaggle_dataset.py  run_kaggle_model.py  schema.py
references/cards/: DatasetCard.md  ModelCard.md
reports/coverage_pytest/: class_index.html  function_index.html  index.html  status.json  z_0d0db7db8e6f5e5a_app_py.html  z_0d0db7db8e6f5e5a_schema_py.html  z_193685411ac05adf_api_utils_py.html  z_193685411ac05adf_dataset_utils_py.html  z_193685411ac05adf_modeling_utils_py.html  z_193685411ac05adf_processing_py.html  z_3acf147be2e23a47_config_py.html
tests/: deepchecks-validation.py  deepchecks_validation.py  test_api.py  test_data.py  test_model.py
